Average Readability added