@@ -1,6 +1,7 @@
 package controllers;
 
 import play.mvc.*;
+import scala.Tuple2;
 import utils.ReadabilityUtil;
 import views.html.*;
 import services.SentimentService;
@@ -9,20 +10,21 @@ import models.Article;
 import play.libs.Json;
 import com.fasterxml.jackson.databind.JsonNode;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.stream.Collectors;
 
-//    @author Dhruv Patel, Jaimim Mayani
+//    @author Dhruv Patel, Jaimim Mayani, Monil Tailor
 public class HomeController extends Controller {
 
     private static final Map<String, List<Article>> cache = new ConcurrentHashMap<>();
-    private static final Deque<String> recentQueries = new LinkedList<>();
+//    private static final Deque<String> recentQueries = new LinkedList<>();
 
     // Accumulated results for stacked display: keyword -> top 10 articles
-    private static final LinkedHashMap<String, List<Article>> accumulatedResults = new LinkedHashMap<>();
+    private final LinkedHashMap<String, Tuple2<List<Article>, Double>> accumulatedResults = new LinkedHashMap<>();
     private static final int MAX_KEYWORDS = 10;
 
     @Inject
@@ -30,14 +32,14 @@ public class HomeController extends Controller {
 
     //    @author Dhruv Patel
     public Result index() {
-        return ok(index.render(new LinkedHashMap<String, List<Article>>(), ":-|"));
+        return ok(index.render(new LinkedHashMap<>(), ":-|"));
     }
 
     //    @author Dhruv Patel
     public CompletionStage<Result> search(String query) {
         if (query == null || query.trim().isEmpty()) {
             return CompletableFuture.completedFuture(
-                    ok(index.render(new LinkedHashMap<String, List<Article>>(), ":-|"))
+                    ok(index.render(new LinkedHashMap<>(), ":-|"))
             );
         }
 
@@ -47,8 +49,15 @@ public class HomeController extends Controller {
                 .limit(10)
                 .collect(Collectors.toList());
 
+        // Calc Average Readability
+        double avgReadability = articles.stream()
+                .mapToDouble(Article::getReadabilityScore)
+                .average()
+                .orElse(0.0);
+
+
         // Add to accumulatedResults (newest keyword on top)
-        accumulatedResults.put(query, articles);
+        accumulatedResults.put(query, new Tuple2<>(articles, avgReadability));
 
         // Remove oldest keyword if more than MAX_KEYWORDS
         if (accumulatedResults.size() > MAX_KEYWORDS) {
@@ -57,11 +66,13 @@ public class HomeController extends Controller {
         }
 
         // Convert to LinkedHashMap before passing to the view
-        LinkedHashMap<String, List<Article>> linkedResults = new LinkedHashMap<>(accumulatedResults);
+//        LinkedHashMap<String, Map.Entry<List<Article>, Double>> linkedResults =
+//                new LinkedHashMap<>(accumulatedResults);
+
 
         // Fetch sentiment for this query
         return sentimentService.sentimentForQuery(query)
-                .thenApply(emoticon -> ok(index.render(linkedResults, emoticon)));
+                .thenApply(emoticon -> ok(index.render(accumulatedResults, emoticon)));
     }
 
     //    @author Dhruv Patel
@@ -71,7 +82,7 @@ public class HomeController extends Controller {
         try {
             String apiKey = "197e644898e24b5384081402fdaafcd3";
             String urlStr = "https://newsapi.org/v2/everything?q="
-                    + URLEncoder.encode(query, "UTF-8")
+                    + URLEncoder.encode(query, StandardCharsets.UTF_8)
                     + "&pageSize=50&sortBy=publishedAt&apiKey=" + apiKey;
 
             java.net.URL url = new java.net.URL(urlStr);
@@ -119,6 +130,53 @@ public class HomeController extends Controller {
             e.printStackTrace();
         }
         return results;
+    }
+
+    //    @author Monil Tailor
+    public Result newsSources(String country, String category, String language) {
+        try {
+            String apiKey = "197e644898e24b5384081402fdaafcd3";
+            StringBuilder urlStr = new StringBuilder("https://newsapi.org/v2/sources?apiKey=" + apiKey);
+
+            if (country != null && !country.isEmpty()) urlStr.append("&country=").append(country);
+            if (category != null && !category.isEmpty()) urlStr.append("&category=").append(category);
+            if (language != null && !language.isEmpty()) urlStr.append("&language=").append(language);
+
+            java.net.URL url = new java.net.URL(urlStr.toString());
+            java.net.HttpURLConnection conn = (java.net.HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+
+            List<Map<String, String>> sourcesList = new ArrayList<>();
+            if (conn.getResponseCode() == 200) {
+                java.io.BufferedReader in = new java.io.BufferedReader(
+                        new java.io.InputStreamReader(conn.getInputStream())
+                );
+                StringBuilder content = new StringBuilder();
+                String line;
+                while ((line = in.readLine()) != null) content.append(line);
+                in.close();
+
+                JsonNode root = Json.parse(content.toString());
+                JsonNode sources = root.get("sources");
+
+                for (JsonNode s : sources) {
+                    Map<String, String> sourceInfo = new HashMap<>();
+                    sourceInfo.put("id", s.path("id").asText());
+                    sourceInfo.put("name", s.path("name").asText());
+                    sourceInfo.put("description", s.path("description").asText(""));
+                    sourceInfo.put("url", s.path("url").asText(""));
+                    sourceInfo.put("category", s.path("category").asText(""));
+                    sourceInfo.put("language", s.path("language").asText(""));
+                    sourceInfo.put("country", s.path("country").asText(""));
+                    sourcesList.add(sourceInfo);
+                }
+            }
+
+            return ok(views.html.newsSources.render(sourcesList));
+        } catch (Exception e) {
+            e.printStackTrace();
+            return internalServerError("Failed to fetch news sources");
+        }
     }
 
     //    @author Jaimin Mayani
